--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 	"engines": {
 		"vscode": "^1.75.0"
 	},
+    "activationEvents": [
+		"onLanguage:p4"
+	],
 	"main": "./client/out/extension",
 	"contributes": {
 		"languages": [
