Add wildcard for extension version.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,5 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: p4lsp
-        path: p4lsp-0.1.0.vsix
+        path: p4lsp-*.vsix
+        if-no-files-found: error
