--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install -g vsce 
+    - run: npm install -g @vscode/vsce
     - run: npm install
     - run: vsce package
 
     - uses: actions/upload-artifact@v3
       with:
-        name: p4lsp-*.vsix
-        path:
+        name: p4lsp.vsix
+        path: p4lsp-*.vsix
         if-no-files-found: error
