Change workflow to only trigger on push with version tag.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build and release extension
 
+
 on:
   push:
-    branches: [ "main", "pipeline" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
