--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,7 @@ jobs:
     - run: npm install
     - run: vsce package
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: p4lsp.vsix
-        path: p4lsp-*.vsix
-        if-no-files-found: error
-
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        files: p4lsp.vsix
+        files: p4lsp-*.vsix
