--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"engines": {
 		"vscode": "^1.75.0"
 	},
-    "activationEvents": [
+	"activationEvents": [
 		"onLanguage:p4"
 	],
 	"main": "./client/out/extension",
@@ -36,8 +36,15 @@
 		],
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
-			"properties": {}
+			"title": "P4 LSP",
+			"properties": {
+				"p4.p4_lsp.path": {
+					"scope": "resource",
+					"type": "string",
+					"description": "Path to `p4_lsp` executable.",
+					"format": "path"
+				  }
+			}
 		}
 	},
 	"scripts": {
@@ -56,5 +63,8 @@
 		"eslint": "^8.35.0",
 		"mocha": "^9.2.1",
 		"typescript": "^5.1.3"
+	},
+	"dependencies": {
+		"axios": "^1.4.0"
 	}
 }
