--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
 		"vscode": "^1.75.0"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
+		"mkdirp": "^3.0.1",
 		"vscode-languageclient": "^8.1.0"
 	},
 	"devDependencies": {
