--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"description": "Language support for the P4 Language",
 	"author": "McSCert",
 	"license": "MIT",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ace-design/p4-lsp-vscode"
@@ -80,5 +80,7 @@
 		"typescript": "^5.1.3"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
+		"mkdirp": "^3.0.1"
 	}
 }
